--- a/games/BrightenUp/index.html
+++ b/games/BrightenUp/index.html
@@ -2,32 +2,32 @@
 <html>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <head>
-        <!-- <base href="http://cims.nyu.edu/drecco2016/"> -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <!-- <link rel="stylesheet" type="text/css" href="css/bootstrap.css"/> -->
+        <link rel="stylesheet" type="text/css" href="./css/game.css"/>
         <script src="js/jquery-2.2.4.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/p5.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.dom.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.sound.min.js"></script>
-        <script src="./js/app.js"></script>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <!-- <link rel="stylesheet" type="text/css" href="css/bootstrap.css"/> -->
-        <link rel="stylesheet" type="text/css" href="./css/game.css"/>
+        <script src="./app.js"></script>
     </head>
     <body>
         <div class="container-fluid"> 
             <h1 class="game-title"> BrightenUp Game </h1> 
-            <form class = "col-sm-3 card p-3 bg-light">
+            <div class="row">
+              <form class = "col-sm-3 card p-3 bg-light">
                 <div class="mb-3">
                     <label for="player-1"> Player 1 Name </label>
-                    <input type="text" class="form-control info-input" id="player-1">
+                    <input type="text" class="form-control info-input" id="player-1" value="Player 1">
                 </div>
                 <div class="mb-3">
                     <label for="player-2"> Player 2 Name </label>
-                    <input type="text" class="form-control info-input" id="player-2">
+                    <input type="text" class="form-control info-input" id="player-2" value="Player 2">
                 </div>
                 <div class="mb-3">
                     <label for="number-of-flares" class="form-label">Number of Flares / Bag: </label>
-                    <span id="number-of-flares-value"> 300 </span>
-                    <input type="range" class="form-range" min="100" max="500" step="10" id="number-of-flares"
+                    <span id="number-of-flares-value"> 200 </span>
+                    <input type="range" class="form-range" min="100" max="300" step="20" id="number-of-flares"
                     onChange="document.getElementById('number-of-flares-value').innerText = document.getElementById('number-of-flares').value">
                 </div>
                 <div class="row mb-3">
@@ -41,12 +41,12 @@
                         <option value="1">1</option>
                         <option value="2" selected="selected">2</option>
                         <option value="3">3</option>
-                        <option value="3">4</option>
-                        <option value="3">5</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
                     </select>
                     <select class="form-select form-select-sm col" id="bag-percent-type1" aria-label="bag-percent-type1">
-                        <option value="1" selected="selected">10</option>
-                        <option value="2">20</option>
+                        <option value="1">0</option>
+                        <option value="2" selected="selected">5</option>
                     </select>
                 </div>
                 <div class="row mb-3">
@@ -55,13 +55,12 @@
                         <option value="1">1</option>
                         <option value="2" selected="selected">2</option>
                         <option value="3">3</option>
-                        <option value="3">4</option>
-                        <option value="3">5</option>
+                        <option value="5">4</option>
+                        <option value="5">5</option>
                     </select>
                     <select class="form-select form-select-sm col" id="bag-percent-type2" aria-label="bag-percent-type2">
-                        <option selected>percent2</option>
-                        <option value="1">10</option>
-                        <option value="2" selected="selected">20</option>
+                        <option value="1" selected="selected">10</option>
+                        <option value="2">20</option>
                     </select>
                 </div>                      
                                     
@@ -71,10 +70,11 @@
                     </div>
                 </div>
             </form>
-
-            <div class="game col-sm-9" id='game-container'>
+            <div class="col-sm-9" id='game-container'>
 
             </div>
+          </div>
+
         </div>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
@@ -89,3 +89,4 @@
 
     </script>
 </html>
+
