--- a/games/BrightenUp/index.html
+++ b/games/BrightenUp/index.html
@@ -25,7 +25,7 @@
                     <input type="text" class="form-control info-input" id="player-2" value="Player 2">
                 </div>
                 <div class="mb-3">
-                    <label for="number-of-flares" class="form-label">Number of Flares / Bag: </label>
+                    <label for="number-of-flares" class="form-label">Number of Flares in Each Bag: </label>
                     <span id="number-of-flares-value"> 200 </span>
                     <input type="range" class="form-range" min="100" max="300" step="20" id="number-of-flares"
                     onChange="document.getElementById('number-of-flares-value').innerText = document.getElementById('number-of-flares').value">
@@ -55,7 +55,7 @@
                         <option value="1">1</option>
                         <option value="2" selected="selected">2</option>
                         <option value="3">3</option>
-                        <option value="5">4</option>
+                        <option value="4">4</option>
                         <option value="5">5</option>
                     </select>
                     <select class="form-select form-select-sm col" id="bag-percent-type2" aria-label="bag-percent-type2">
